<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Study</string>
    <string name="action_settings">Settings</string>
    <string name="name_main">主界面</string>
	<string name="name_cycle">Activity Cycle</string>
	<string name="name_service">Activity Service</string>
	<string name="name_broadcast">Activity Broadcast</string>
	<string name="name_static_broadcast">静态注册Broadcast</string>
	<string name="name_dynamic_broadcast">动态注册Broadcast</string>
	<string name="name_process">Activity Process</string>
	<string name="name_fragment">Activity Fragment</string>
	<string name="name_testfragment">第%1$s个fragment</string>
	<string name="name_view">Activity View</string>
	<string name="desc_main">主功能列表</string>
	<string name="desc_cycle">调研Activity生命周期</string>
	<string name="desc_cycle_blend">生命周期调研\n混合两个Activity的生命周期\n点击关闭按钮即可看到两个Activity混合周期函数结果</string>
	<string name="desc_service">调研Service</string>
	<string name="desc_broadcast">调研BroadcastReceiver</string>
	<string name="desc_static_broadcast">静态注册Broadcast发来的消息</string>
	<string name="desc_dynamic_broadcast">动态注册Broadcast发来的消息</string>
	<string name="desc_process">多进程调研</string>
	<string name="desc_fragment">fragment调研</string>
	<string name="desc_testfragment">第%1$s个fragment\n用于测试</string>
	<string name="desc_view">View的调研</string>
	<string name="button_cycle_blend">点击关闭</string>
	<string name="button_cycle">点击查看交互生命周期</string>
	<string name="button_service_start">start service</string>
	<string name="button_service_stop">stop service</string>
	<string name="button_service_bind">bind service</string>
	<string name="button_service_unbind">unbind service</string>
	<string name="button_broadcast_register">动态注册Broadcast</string>
	<string name="button_broadcast_senddynamic">发送Dynamic Broadcast</string>
	<string name="button_broadcast_sendstatic">发送Static Broadcast</string>
	<string name="button_view_post">发送事件</string>
	<string name="button_view_end">事件结束</string>
	<string name="text_process_base">基础进程ID：%1$s</string>
	<string name="text_process_current">现在进程ID：%1$s</string>
</resources>
