<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <Button
        android:id="@+id/service_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_service_start"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />

    <Button
        android:id="@+id/service_stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_service_stop"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />

    <Button
        android:id="@+id/service_bind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_service_bind"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />

    <Button
        android:id="@+id/service_unbind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_service_unbind"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />

</LinearLayout>